examples/good/02-string-literal.tx
fun main(): Void {
  printString("Hello world!");

  return;
}
