examples/bad/05-while.tx
fun main(): Void {
  while(true)
    printString("infinity");


  return;
}